# AutonomousSurveillanceBachelorThesis

./: .gitignore  AutonomousSurveillanceBachelorThesis.vcxproj  AutonomousSurveillanceBachelorThesis.vcxproj.filters  README.md  SwarmDeployment.sln
Petrlik-sources/: Goal.m  Goal_map.m  Obstacle.m  README.txt  a_star.m  car_like_motion_model.m  check_expandability.m  check_inside_obstacle.m  check_localization_sep.m  check_near_goal.m  check_obstacle_vcollide.m  check_obstacle_vcollide_single.m  check_rdistance.m  check_world_bounds.m  circle.m  coldetect.cpp  contains_obj.m  contains_obstacle.m  detect_narrow_passage.m  distance_transform.m  draw_map.m  draw_run.m  experiment_gp.m  experiment_np_div.m  experiment_np_l.m  experiment_np_nn.m  experiment_np_w.m  experiment_random_init.m  fitness_function.m  generate_rrt_fast.m  get_best_fitness.m  get_closest_node_to_goal.m  get_curvature.m  get_goal_distances.m  get_guiding_path.m  get_map_grid.m  get_map_grid_old.m  get_new_node.m  get_path.m  grid_to_nodes.m  (+44 more)
SwarmDeployment/: AStar.cpp  AStar.h  AoICoverageResolver.cpp  AoICoverageResolver.h  CMakeLists.txt  CarLikeAnalyticMotionModel.cpp  CarLikeAnalyticMotionModel.h  CarLikeControl.cpp  CarLikeControl.h  CarLikeMotionModel.cpp  CarLikeMotionModel.h  ClosedSet.cpp  ClosedSet.h  CollisionDetector.cpp  CollisionDetector.h  Configuration.cpp  Configuration.h  Core.cpp  Core.h  DistanceResolver.cpp  DistanceResolver.h  EmptyGoal.cpp  EmptyGoal.h  EmptyPath.cpp  EmptyPath.h  Enums.h  FileSystem.cpp  FileSystem.h  Goal.cpp  Goal.h  GoalGroup.cpp  GoalGroup.h  GoalInterface.cpp  GoalInterface.h  Gui.cpp  Gui.h  GuiDrawer.cpp  GuiDrawer.h  GuidingPathFactory.cpp  GuidingPathFactory.h  (+82 more)
SwarmDeployment/DebugNoGui/SwarmDeployment.tlog/: CL.command.1.tlog  CL.write.1.tlog  SwarmDeployment.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SwarmDeployment/Dubins/: dubins_test.cpp  rrt.cpp  rrt.h  types.h  utils.h
SwarmDeployment/Dubins/geom/: Arc.cpp  Arc.h  Dubins.cpp  Dubins.h  Intersection.h  Line.cpp  Line.h  MyMath.h  Path.cpp  Path.h  Point.h  Position.cpp  Position.h  Vector.h  geom.h
SwarmDeployment/Dubins/geom/shape/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Polygon.cpp  Polygon.h  Shape.cpp  Shape.h  ShapePoint.cpp  ShapePoint.h
SwarmDeployment/GeneratedFiles/: ui_mainwindow.h
SwarmDeployment/ReleaseNoGui/SwarmDeployment.tlog/: CL.write.1.tlog  SwarmDeployment.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SwarmDeployment/VCollide/: ColDetect.h  NBody.cpp  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  RAPID.cpp  Rectangle2D.cpp  Rectangle2D.h  Triangle3D.cpp  Triangle3D.h  VInternal.cpp  build.cpp  coldetect.cpp  collide.cpp  overlap.cpp  sample_client.cpp  simple.cpp  simple2.cpp
SwarmDeployment/boost/archive/: tmpdir.hpp
SwarmDeployment/boost/numeric/ublas/: matrix.hpp
SwarmDeployment/easyloggingpp-9.80/samples/VC++/VCPP2013_PreviewUltimate/: Main.cpp  VCPP2013_PreviewUltimate.vcxproj  VCPP2013_PreviewUltimate.vcxproj.filters
SwarmDeployment/json_spirit_v4.08/json_demo/: json_demo.cpp
SwarmDeployment/json_spirit_v4.08/json_map_demo/: json_map_demo.cpp
Win32/DebugNoGui/: frequencies.json
Win32/ReleaseNoGui/: frequencies.json
Win32/ReleaseNoGui/output/: Thumbs.db
include/: Configuration.h  Goal.h  Map.h  MapFactory.h  Obstacle.h  Path.h  Rectangle.h
sources/: Configuration.cpp  Goal.cpp  Map.cpp  MapFactory.cpp  Node.cpp  Obstacle.cpp  Path.cpp  Rectangle.cpp  main.cpp
sources/qt-project/: AutonomousSurvailenceGui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mockmodel.cpp
